# smali_disassembler

./: Cargo.toml  README.md
examples/: nopnop.rs
src/: README.md  bytecode_format.rs  errors.rs  lib.rs  main.rs  opcodes.rs  reader.rs
src/dalvik/: bytecode_format.rs  mod.rs  opcodes.rs
tests/: simple_parse.rs
