[package]
name = "smali_disassembler"
version = "0.2.0"
edition = "2021"
authors = ["Daniel Bartov <daniel.bartov@gmail.com>"]
description = "smali disassembler written fully in Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies] 
zip = "2.2.0"
dex = "0.5.0"
